--- a/navbar.html
+++ b/navbar.html
@@ -47,8 +47,8 @@
      </div>
           <div id="tags">
          
-             <div><p>Signup</p></div>
-              <div> <p>Login</p></div>
+             <div><a href="signup.html">Signup</a></div>
+              <div> <a href="login.html">Login</a></div>
                  <div><p>Women</p></div>
                   <div><p>Men</p></div>
      </div>
