--- a/navbar.html
+++ b/navbar.html
@@ -37,6 +37,9 @@
             margin: auto;
            
         }
+        a{
+            color: white;
+        }
        
     </style>
 </head>
